- Fixed list as blocks column layout on mobile devices.

--- a/RockWeb/Styles/rock-components/pagelist.less
+++ b/RockWeb/Styles/rock-components/pagelist.less
@@ -30,16 +30,10 @@
       position: relative;
       -ms-flex: 0 0 50%;
       flex: 0 0 50%;
-      flex-basis: 0;
-      flex-grow: 1;
-      width: 100%;
-      max-width: 100%;
       max-width: 50%;
       padding-right: (@grid-gutter-width / 2);
       padding-left: (@grid-gutter-width / 2);
       margin-bottom: (@grid-gutter-width / 2);
-      -ms-flex-preferred-size: 0;
-      -ms-flex-positive: 1;
 
       @media (min-width: @screen-sm-min) {
         -ms-flex: 0 0 33.3333%;
